--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>{{ .Title }}</title>
   </head>
   <body>
-    <h1>Nice. It's looking good already.</h1>
-    <ul>
-      {{ range (where .Pages "Section" "blog") }}
-      <li>
-        <a href="{{ .RelPermalink }}"> {{ .Title }} </a>
-      </li>
-      {{ end }}
-    </ul>
+    <h1>{{ .Title }}</h1>
+    <p class="date">{{ .Date }}</p>
+    <p class="description">{{ .Params.description }}</p>
+    <article class="content">{{ .Content }}</article>
   </body>
 </html>
