--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="/header.css" />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,13 +18,36 @@
     />
   </head>
   <body>
-    <h1>Nice. It's looking good already.</h1>
-    <ul>
-      {{ range (where .Pages "Section" "blog") }}
-      <li>
-        <a href="{{ .RelPermalink }}"> {{ .Title }} </a>
-      </li>
-      {{ end }}
-    </ul>
+    <header>
+      <div class="logo__wrapper">
+        <img
+          src="/sfw-icon.svg"
+          class="logo__image"
+          alt="Schülerforschungswerks Logo"
+        />
+        <h1 class="logo__title">SFW</h1>
+      </div>
+      <nav>
+        <div class="hamburger">
+          <div class="hamburger__line"></div>
+          <div class="hamburger__line"></div>
+          <div class="hamburger__line"></div>
+        </div>
+        <ul class="hamburger__links">
+          <li><a href="#">Wahlkurse</a></li>
+          <li><a href="#">Workshops</a></li>
+          <li><a href="#">SFW Tag</a></li>
+          <li><a href="#">Programm</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="hero__banner-wrapper">
+          <h2 class="hero__title">Schülerforschungswerkstatt</h2>
+          <h3 class="hero__subtitle">Kepler Gymnasium Weiden</h3>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
