refactor: move hero logic to a separate file

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,6 +8,7 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/main.css" />
     <link rel="stylesheet" href="/header.css" />
+    <link rel="stylesheet" href="/hero.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
