feat: implement responsive hamburger menu with updated styles

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -28,21 +28,20 @@
         />
         <h1 class="logo__title">SFW</h1>
       </div>
-      <nav>
-        <div class="hamburger">
-          <div class="hamburger__line"></div>
-          <div class="hamburger__line"></div>
-          <div class="hamburger__line"></div>
-        </div>
-        <ul class="hamburger__links">
-          <li><a href="#">Wahlkurse</a></li>
-          <li><a href="#">Workshops</a></li>
-          <li><a href="#">SFW Tag</a></li>
-          <li><a href="#">Programm</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
+        <label class="hamburger__menu-btn">
+          <input type="checkbox" id="checkbox" />
+        </label>
+        <nav class="hamburger__menu">
+          <ul class="hamburger__links">
+            <li><a href="/">Homepage</a></li>
+            <li><a href="/workshops">Workshops</a></li>
+            <li><a href="/wahlkurse">Wahlkurse</a></li>
+            <li><a href="/sfw-tag">SFW Tag</a></li>
+            <li><a href="/programm">Programm</a></li>
+          </ul>
+        </nav>
+      </header>
+    <div>
       <section class="hero">
         <div class="hero__banner-wrapper">
           <h2 class="hero__title">Schülerforschungswerkstatt</h2>
