feat: add home section for mobile

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/main.css" />
     <link rel="stylesheet" href="/header.css" />
     <link rel="stylesheet" href="/hero.css" />
+    <link rel="stylesheet" href="/home.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -41,13 +42,53 @@
           </ul>
         </nav>
       </header>
-    <div>
+    <main>
       <section class="hero">
         <div class="hero__banner-wrapper">
           <h2 class="hero__title">Schülerforschungswerkstatt</h2>
-          <h3 class="hero__subtitle">Kepler-Gymnasium Weiden</h3>
+          <h3 class="hero__subtitle">Kepler Gymnasium Weiden</h3>
         </div>
       </section>
+<div class="home">
+        <section>
+          <h2 class="home__title">Workshops</h2>
+          <article class="home__article">
+            <a class="home__link" href="/workshops"></a>
+            <img src="./workshop.jpg" alt="Workshop" class="home__img" />
+            <h3 class="home__subtitle">Workshop 2024</h3>
+            <p class="home__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure
+            </p>
+          </article>
+        </section>
+        <section>
+          <h2 class="home__title">Wahlkurse</h2>
+          <article class="home__article">
+            <a class="home__link" href="/wahlkurse"></a>
+            <img src="./course.jpg" alt="Wahlkurs" class="home__img" />
+            <h3 class="home__subtitle">Wahlkurs 2024</h3>
+            <p class="home__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure
+            </p>
+          </article>
+        </section>
+        <section>
+          <h2 class="home__title">Unser Programm</h2>
+          <img
+            src="./sfw-program.jpg"
+            alt="Programm"
+            class="home__img-program"
+            id="image-viewer-trigger"
+            tabindex="0"
+          />
+        </section>
+      </div>
     </main>
   </body>
 </html>
