refactor: create a better static folder structure

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="/main.css" />
-    <link rel="stylesheet" href="/header.css" />
-    <link rel="stylesheet" href="/hero.css" />
-    <link rel="stylesheet" href="/home.css" />
-    <link rel="stylesheet" href="/image-viewer.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="./styles/header.css" />
+    <link rel="stylesheet" href="./styles/hero.css" />
+    <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="./styles/image-viewer.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -55,7 +55,7 @@
           <h2 class="home__title">Workshops</h2>
           <article class="home__article">
             <a class="home__link" href="/workshops"></a>
-            <img src="./workshop.jpg" alt="Workshop" class="home__img" />
+            <img src="./images/workshop.jpg" alt="Workshop" class="home__img" />
             <h3 class="home__subtitle">Workshop 2024</h3>
             <p class="home__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
@@ -69,7 +69,7 @@
           <h2 class="home__title">Wahlkurse</h2>
           <article class="home__article">
             <a class="home__link" href="/wahlkurse"></a>
-            <img src="./course.jpg" alt="Wahlkurs" class="home__img" />
+            <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
             <h3 class="home__subtitle">Wahlkurs 2024</h3>
             <p class="home__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
@@ -82,7 +82,7 @@
         <section>
           <h2 class="home__title">Unser Programm</h2>
           <img
-            src="./sfw-program.jpg"
+            src="./images/sfw-program.jpg"
             alt="Programm"
             class="home__img-program"
             id="image-viewer-trigger"
@@ -99,7 +99,7 @@
           <div class="image-viewer__overlay" id="image-viewer-overlay"></div>
           <div class="image-viewer__container">
             <img
-              src="./sfw-program.jpg"
+              src="./images/sfw-program.jpg"
               alt="Programm"
               class="image-viewer__img"
               id="image-viewer-img"
