--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,9 +22,9 @@
   </head>
   <body>
     <header>
-      <div class="logo__wrapper">
+      <div class="logo__container">
         <img
-          src="/sfw-icon.svg"
+          src="./images/sfw-icon.svg"
           class="logo__image"
           alt="Schülerforschungswerks Logo"
         />
