--- a/static/styles/hero.css
+++ b/static/styles/hero.css
@@ -1,5 +1,6 @@
 .hero {
-  background-image: url("/sfw-hero-bg.png");
+  background-image: url("../images/sfw-hero-bg.png");
+  background-color: white;
   width: 100%;
   min-height: 250px;
   background-size: cover;
