--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      href="https://fo nts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -29,6 +29,7 @@
           alt="Schülerforschungswerks Logo"
         />
         <h1 class="logo__title">SFW</h1>
+        <a class="overlay__link" href="/" aria-label="Zur Startseite"></a>
       </div>
       <label class="hamburger__menu-btn" id="hamburger-menu-btn">
         <input type="checkbox" id="checkbox" />
@@ -54,7 +55,7 @@
         <section>
           <h2 class="home__title">Workshops</h2>
           <article class="home__article">
-            <a class="home__link" href="/workshops"></a>
+            <a class="overlay__link" href="/workshops"></a>
             <img src="./images/workshop.jpg" alt="Workshop" class="home__img" />
             <h3 class="home__subtitle">Workshop 2024</h3>
             <p class="home__text">
@@ -68,7 +69,7 @@
         <section>
           <h2 class="home__title">Wahlkurse</h2>
           <article class="home__article">
-            <a class="home__link" href="/wahlkurse"></a>
+            <a class="overlay__link" href="/wahlkurse"></a>
             <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
             <h3 class="home__subtitle">Wahlkurs 2024</h3>
             <p class="home__text">
