feat: optimize kepler icon svg

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,7 +24,7 @@
     <header>
       <div class="logo__container">
         <img
-          src="./images/sfw-icon.svg"
+          src="./images/kepler-icon.svg"
           class="logo__image"
           alt="Schülerforschungswerks Logo"
         />
