--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -1,5 +1,5 @@
 .home {
-  padding-inline: 1em;
+  padding-inline: 1.25em;
 }
 
 .home__title {
@@ -14,8 +14,8 @@
 .home__article {
   background-color: var(--primary-color);
   border-radius: 4px;
-  padding: 1em;
-  padding-bottom: 2em;
+  padding: 1.25em 1em;
+  padding-bottom: 3em;
   position: relative;
 }
 
