feat: add article layout

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -54,33 +54,148 @@
       <div class="home">
         <section>
           <h2 class="home__title">Workshops</h2>
-          <article class="home__article">
-            <a class="overlay__link" href="/workshops"></a>
-            <img src="./images/workshop.jpg" alt="Workshop" class="home__img" />
-            <h3 class="home__subtitle">Workshop 2024</h3>
-            <p class="home__text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            </p>
-          </article>
+          <div class="home__articles">
+            <article class="home__article">
+              <a class="overlay__link" href="/workshops"></a>
+              <img
+                src="./images/workshop.jpg"
+                alt="Workshop"
+                class="home__img"
+              />
+              <h3 class="home__subtitle">Workshop 2024</h3>
+              <p class="home__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              </p>
+            </article>
+            <article class="home__article">
+              <a class="overlay__link" href="/workshops"></a>
+              <img
+                src="./images/workshop.jpg"
+                alt="Workshop"
+                class="home__img"
+              />
+              <h3 class="home__subtitle">Workshop 2025</h3>
+              <p class="home__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              </p>
+            </article>
+            <article class="home__article">
+              <a class="overlay__link" href="/workshops"></a>
+              <img
+                src="./images/workshop.jpg"
+                alt="Workshop"
+                class="home__img"
+              />
+              <h3 class="home__subtitle">Workshop 2025</h3>
+              <p class="home__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              </p>
+            </article>
+          </div>
         </section>
         <section>
           <h2 class="home__title">Wahlkurse</h2>
-          <article class="home__article">
-            <a class="overlay__link" href="/wahlkurse"></a>
-            <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
-            <h3 class="home__subtitle">Wahlkurs 2024</h3>
-            <p class="home__text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            </p>
-          </article>
+          <div class="home__articles">
+            <article class="home__article">
+              <a class="overlay__link" href="/wahlkurse"></a>
+              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
+              <h3 class="home__subtitle">Wahlkurs 2024</h3>
+              <p class="home__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              </p>
+            </article>
+            <article class="home__article">
+              <a class="overlay__link" href="/wahlkurse"></a>
+              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
+              <h3 class="home__subtitle">Wahlkurs 2024</h3>
+              <p class="home__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              </p>
+            </article>
+            <article class="home__article">
+              <a class="overlay__link" href="/wahlkurse"></a>
+              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
+              <h3 class="home__subtitle">Wahlkurs 2024</h3>
+              <p class="home__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              </p>
+            </article>
+            <article class="home__article">
+              <a class="overlay__link" href="/wahlkurse"></a>
+              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
+              <h3 class="home__subtitle">Wahlkurs 2024</h3>
+              <p class="home__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              </p>
+            </article>
+            <article class="home__article">
+              <a class="overlay__link" href="/wahlkurse"></a>
+              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
+              <h3 class="home__subtitle">Wahlkurs 2024</h3>
+              <p class="home__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              </p>
+            </article>
+            <article class="home__article">
+              <a class="overlay__link" href="/wahlkurse"></a>
+              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
+              <h3 class="home__subtitle">Wahlkurs 2024</h3>
+              <p class="home__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              </p>
+            </article>
+            <article class="home__article">
+              <a class="overlay__link" href="/wahlkurse"></a>
+              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
+              <h3 class="home__subtitle">Wahlkurs 2024</h3>
+              <p class="home__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              </p>
+            </article>
+            <article class="home__article">
+              <a class="overlay__link" href="/wahlkurse"></a>
+              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
+              <h3 class="home__subtitle">Wahlkurs 2024</h3>
+              <p class="home__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              </p>
+            </article>
+          </div>
         </section>
-        <section id="program">
+        <section id="program" class="home__section">
           <h2 class="home__title">Unser Programm</h2>
           <img
             src="./images/sfw-program.jpg"
