--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -2,6 +2,12 @@
   padding-inline: 1.25em;
 }
 
+.home__section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .home__title {
   text-transform: uppercase;
   color: var(--heading-text-color);
@@ -17,6 +23,7 @@
   padding: 1.25em 1em;
   padding-bottom: 3em;
   position: relative;
+  margin-bottom: 1em;
 }
 
 .home__img {
@@ -28,6 +35,7 @@
 
 .home__img-program {
   width: 100%;
+  max-width: 900px;
 }
 
 .home__subtitle,
@@ -62,4 +70,89 @@
   bottom: 0;
   right: 0;
   text-decoration: none;
+}
+
+@media (min-width: 600px) {
+  .home__articles {
+    display: grid;
+    gap: 1em;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
+
+  .home__article {
+    min-width: 300px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .home__articles {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .home__title {
+    font-size: 1.5rem;
+  }
+
+  .home__subtitle {
+    font-size: 1.25rem;
+  }
+
+  .home__text {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .home {
+    padding-inline: 3em;
+  }
+
+  .home__title {
+    font-size: 1.75rem;
+  }
+
+  .home__subtitle {
+    font-size: 1.5rem;
+  }
+
+  .home__text {
+    font-size: 1.125rem;
+  }
+
+  .home__article {
+    max-width: 400px;
+  }
+
+  .home__articles {
+    gap: 2em;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (min-width: 1800px) {
+  /* .home__articles {
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  .home__article {
+    max-width: 500px;
+  } */
+
+  .home__title {
+    font-size: 2.25rem;
+  }
+
+  .home__subtitle {
+    font-size: 1.75rem;
+  }
+
+  .home__text {
+    font-size: 1.25rem;
+  }
+
+  .home__article {
+    max-width: 420px;
+    padding-bottom: 4em;
+  }
 }
