feat: add partner section with logos

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -138,61 +138,6 @@
                 nisi ut aliquip ex ea commodo consequat. Duis aute irure
               </p>
             </article>
-            <article class="home__article">
-              <a class="overlay__link" href="/wahlkurse"></a>
-              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
-              <h3 class="home__subtitle">Wahlkurs 2024</h3>
-              <p class="home__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure
-              </p>
-            </article>
-            <article class="home__article">
-              <a class="overlay__link" href="/wahlkurse"></a>
-              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
-              <h3 class="home__subtitle">Wahlkurs 2024</h3>
-              <p class="home__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure
-              </p>
-            </article>
-            <article class="home__article">
-              <a class="overlay__link" href="/wahlkurse"></a>
-              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
-              <h3 class="home__subtitle">Wahlkurs 2024</h3>
-              <p class="home__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure
-              </p>
-            </article>
-            <article class="home__article">
-              <a class="overlay__link" href="/wahlkurse"></a>
-              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
-              <h3 class="home__subtitle">Wahlkurs 2024</h3>
-              <p class="home__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure
-              </p>
-            </article>
-            <article class="home__article">
-              <a class="overlay__link" href="/wahlkurse"></a>
-              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
-              <h3 class="home__subtitle">Wahlkurs 2024</h3>
-              <p class="home__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure
-              </p>
-            </article>
           </div>
         </section>
         <section id="program" class="home__section">
@@ -229,6 +174,48 @@
             &times;
           </button>
         </div>
+        <section class="home__section-logos">
+          <img
+            src="./images/gebhardt-logo.svg"
+            alt="Gebhardt Logo"
+            class="home__img-program"
+          />
+          <img
+            src="./images/hoehbauer-logo.svg"
+            alt="Höhbauer Logo"
+            class="home__img-program"
+          />
+          <img
+            src="./images/jugend-forscht-logo.svg"
+            alt="Jugend forscht Logo"
+            class="home__img-program"
+          />
+          <img
+            src="./images/nexans-logo.svg"
+            alt="Nexans Logo"
+            class="home__img-program"
+          />
+          <img
+            src="./images/novem-logo.svg"
+            alt="Novem Logo"
+            class="home__img-program"
+          />
+          <img
+            src="./images/oth-logo.svg"
+            alt="OTH Weiden Logo"
+            class="home__img-program"
+          />
+          <img
+            src="./images/tiki-logo.svg"
+            alt="Tiki Logo"
+            class="home__img-program"
+          />
+          <img
+            src="./images/uebzo-logo.svg"
+            alt="ÜBZO Logo"
+            class="home__img-program"
+          />
+        </section>
       </div>
     </main>
     {{ $imageViewerJS := resources.Get "js/image-viewer.js" | minify |
