feat: add insta embed

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -216,6 +216,15 @@
             class="home__img-program"
           />
         </section>
+        <section class="home__section-insta">
+          <script
+            src="https://cdn.commoninja.com/sdk/latest/commonninja.js"
+            defer
+          ></script>
+          <div
+            class="commonninja_component pid-85aba765-8fae-4ca9-9d33-fa1ae3363392"
+          ></div>
+        </section>
       </div>
     </main>
     {{ $imageViewerJS := resources.Get "js/image-viewer.js" | minify |
