feat: enhance footer with design credits

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -250,9 +250,11 @@
 
       <p class="footer__author">
         Made by
-        <a href="https://github.com/plesioo" class="footer__link"
+        <a href="https://github.com/plesioo" class="footer__link underline"
           >Phillip Fleischer</a
-        >
+        >,
+        <br />
+        design help by <span class="underline">Stefan Heidel</span>
       </p>
     </footer>
     {{ $imageViewerJS := resources.Get "js/image-viewer.js" | minify |
