--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -1,3 +1,8 @@
+.underline {
+  text-decoration: underline;
+  text-decoration-thickness: 1.5px;
+}
+
 footer {
   background-color: var(--primary-color);
   padding: 1.5em 1.5em;
@@ -32,13 +37,8 @@ footer a {
 }
 
 .footer__author {
-  margin-top: 1.25em;
   font-size: 0.75rem;
-}
-
-.footer__link {
-  text-decoration: underline;
-  text-decoration-thickness: 1.5px;
+  line-height: 1.5;
 }
 
 @media (min-width: 768px) {
